--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <p>You can also find me on:</p>
             <a href="https://www.linkedin.com/in/georgepearkes/" target="_blank">LinkedIn</a>
             <a href="https://bsky.app/profile/peark.es" target="_blank">Bluesky</a>
-            <a href="/podcast/" target="_blank">My Podcast</a>
+            <a href="/podcast/" target="_blank">Normal Men Podcast</a>
         </div>
     </main>
     
