--- a/podcast/index.html
+++ b/podcast/index.html
@@ -136,7 +136,7 @@
                     
                     // Add Apple Podcasts link if iTunes info exists
                     if (channel.querySelector('itunes\\:author, author') || channel.querySelector('itunes\\:category, category')) {
-                        linksHTML += '<a href="" target="_blank">Apple Podcasts (coming soon)</a>';
+                        linksHTML += '<a href="https://podcasts.apple.com/us/podcast/normal-men/id1807669620" target="_blank">Apple Podcasts</a>';
                     }
                     
                     // Add Spotify link (generic)
