--- a/podcast/index.html
+++ b/podcast/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Normal Men</title>
+    <meta property="og:title" content="Normal Men" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://peark.es/podcast/" />
+    <meta property="og:image" content="https://pearkes-podcast-files.s3.us-east-2.amazonaws.com/normal-men-cover-v1-040925.png" />
     <style>
         body {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
