--- a/podcast/index.html
+++ b/podcast/index.html
@@ -7,7 +7,7 @@
     <meta property="og:title" content="Normal Men" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://peark.es/podcast/" />
-    <meta property="og:url" content="Normal Men is four guys talking about the news. We want to help explain what's happening in the world around us and have some laughs along the way. And we think you might enjoy hearing what we have to say, as long as you don't mind a bit of normalcy in a world without much of it." />
+    <meta property="og:description" content="Normal Men is four guys talking about the news. We want to help explain what's happening in the world around us and have some laughs along the way. And we think you might enjoy hearing what we have to say, as long as you don't mind a bit of normalcy in a world without much of it." />
     <meta property="og:image" content="https://pearkes-podcast-files.s3.us-east-2.amazonaws.com/normal-men-cover-v1-040925.png" />
     <style>
         body {
